# pulsesql

./: .REFACTOR.md  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  splash.html  tailwind.config.js  vite.config.ts
.agents/spcs/: multi-db-ssh-driver-phase-1-plan.md  multi-db-ssh-driver-spec.md  query-history-v2-spec.md
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
docs/: RELEASING.md  index.html  new-layout.md
scripts/: run-tauri-build.ps1  run-tauri-dev.ps1
src/: App.tsx  SplashScreen.tsx  devFlags.ts  index.css  main.tsx  splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/oracle-jdbc-sidecar/: OracleJdbcRunner.java
src-tauri/src/: cmd.rs  db.rs  jdk.rs  lib.rs  main.rs  updater.rs
src-tauri/src/connection/: types.rs
src-tauri/src/engines/: mod.rs  mysql.rs  oracle.rs  postgres.rs
src-tauri/src/history/: model.rs  repository.rs  service.rs
src-tauri/src/metadata/: model.rs  repository.rs  service.rs
src-tauri/src/ssh/: tunnel.rs
src/components/ui/: AppSelect.tsx  EcgLine.tsx  EcgMonitor.tsx  PulseLoader.tsx
src/features/connections/: ConnectionForm.tsx  ConnectionManager.tsx  JdkSetupBanner.tsx  TitleBar.tsx  connection-engines.ts
src/features/database/: Explorer.tsx  metadata-cache.ts  types.ts  (+1 more)
src/i18n/: index.ts
src/lib/: monaco-theme.ts
src/store/: connectionRuntime.ts  connections.ts  databaseSession.ts  queries.ts  systemConfig.ts  uiPreferences.ts
src/themes/: index.ts
(+18 files in other folders)
