[package]
name = "pulsesql"
version = "0.1.6"
description = "PulseSQL desktop SQL workstation"
authors = ["Saulo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulsesql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "sqlite", "runtime-tokio-rustls", "json", "chrono"] }
tokio = "1.51.1"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
